--- a/css/index.css
+++ b/css/index.css
@@ -77,30 +77,55 @@ body {
   min-height: 10vh;
   align-items: center;
   display: grid;
-  column-gap: 50px;
+  column-gap: 5rem;
   grid-template-columns: min-content 1fr;
-  background-color: blue;
+  padding: 2rem;
 }
-.appmenu__one {
+.appmenu__logo {
   background-color: yellow;
 }
 .appmenu__normal {
   background-color: pink;
   display: grid;
-  grid-template-columns: max-content min-content min-content max-content min-content;
-  column-gap: 100px;
-  align-items: center;
+  grid-template-columns: max-content max-content max-content max-content min-content;
+  justify-content: center;
+  column-gap: 50px;
 }
-.appmenu__normal:hover {
+@media only screen and (max-width: 1200px) {
+  .appmenu__normal {
+    display: none;
+  }
+}
+.appmenu__normal__first {
+  background-color: beige;
+}
+.appmenu__normal__second {
+  background-color: yellow;
+}
+.appmenu__normal__third {
   background-color: #fff;
+}
+.appmenu__normal__fourth {
+  background-color: aliceblue;
+}
+.appmenu__normal__fifth {
+  background-color: chocolate;
 }
 .appmenu__normal a {
   text-decoration: none;
-  color: inherit;
-  background-color: red;
 }
-.appmenu__normal a:hover {
-  background-color: yellow;
+
+.in__mobile__tablet__only {
+  text-align: end;
+}
+.in__mobile__tablet__only .hamberg__menu__icon {
+  width: 22px;
+  height: 22px;
+}
+@media only screen and (min-width: 1200px) {
+  .in__mobile__tablet__only {
+    display: none;
+  }
 }
 
 .header {
@@ -222,13 +247,15 @@ body {
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1rem;
   grid-column-gap: 1rem;
+  font-size: 1.5rem;
+  font-weight: 200;
 }
 .feature__icon {
-  width: 3rem;
-  height: 3rem;
+  fill: #c69963;
+  width: 2.5rem;
+  height: 2.5rem;
   grid-row: 1/3;
 }
-
 .homes {
   grid-column: center-start/center-end;
   margin: 5rem 0;
