--- a/sass/input.scss
+++ b/sass/input.scss
@@ -23,6 +23,7 @@ body {
 
 .container {
   display: grid;
+
   grid-template-rows: min-content 70vh min-content 600px repeat(3, min-content);
   grid-template-columns:
     [full-start] minmax(10rem, 1fr)
@@ -59,27 +60,16 @@ body {
 
   display: grid;
 
-  column-gap: 50px;
+  column-gap: 5rem;
 
   grid-template-columns: min-content 1fr;
 
-  background-color: blue;
+  // background-color: blue;
 
-  &__one {
+  padding: 2rem;
+
+  &__logo {
     background-color: yellow;
-  }
-
-  &__two {
-    // background-color: pink;
-  }
-  &__three {
-    // background-color: #c69963;
-  }
-  &__four {
-    // background-color: #fff;
-  }
-  &__five {
-    // background-color: blue;
   }
 
   &__normal {
@@ -87,25 +77,71 @@ body {
 
     display: grid;
 
-    grid-template-columns: max-content min-content min-content max-content min-content;
+    grid-template-columns: max-content max-content max-content max-content min-content;
 
-    column-gap: 100px;
+    justify-content: center;
 
-    align-items: center;
+    column-gap: 50px;
 
-    &:hover {
-      background-color: #fff;
+
+
+
+    @media only screen and (max-width: $bp-large) {
+      
+      // background-color: red;
+      display: none;
+
     }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-      background-color: red;
+    &__first {
+      background-color: beige;
     }
-    a:hover {
+
+    &__second {
       background-color: yellow;
     }
+    &__third {
+      background-color: #fff;
+    }
+    &__fourth {
+      background-color: aliceblue;
+    }
+    &__fifth {
+      background-color: chocolate;
+    }
+    a {
+      text-decoration: none;
+    }
   }
+}
+
+
+
+
+.in__mobile__tablet__only{
+
+
+    text-align: end;
+
+    .hamberg__menu__icon{
+
+      width: 22px;
+      height:22px;
+   
+    }
+    
+
+
+
+    @media only screen and (min-width:$bp-large ){
+      // background-color: pink;
+      display: none;
+
+    }
+
+
+
+
 }
 
 .header {
@@ -252,12 +288,26 @@ body {
   grid-row-gap: 1rem;
 
   grid-column-gap: 1rem;
-  // background-color: red;
+  font-size: 1.5rem;
+  font-weight: 200;
+
 
   &__icon {
-    width: 3rem;
-    height: 3rem;
+    fill:#c69963;
+    width: 2.5rem;
+    height: 2.5rem;
     grid-row: 1 / 3;
+  }
+
+  h1{
+      
+
+
+
+  }
+
+  p{
+
   }
 }
 
