--- a/sass/Pages/AddHouseForm.scss
+++ b/sass/Pages/AddHouseForm.scss
@@ -1,7 +1,9 @@
 @use "../Base/base.scss";
 
 
-.container {
+
+
+.container  {
     max-width: 600px;
     margin: 2rem auto;
     padding: 2rem;
@@ -9,14 +11,18 @@
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+            font-weight: 600;
+        }
+
 }
 
-h1 {
-    text-align: center;
-    color: #2c3e50;
-    margin-bottom: 1.5rem;
-    font-weight: 600;
-}
+
+
+
 
 .todo-form {
     display: flex;
@@ -68,13 +74,15 @@ h1 {
 }
 
 .submit-btn {
-    background-color: #2ecc71;
-    color: white;
+
+    // background-color:black;
+
+    // color: white;
 }
 
-.submit-btn:hover {
-    background-color: #27ae60;
-}
+// .submit-btn:hover {
+//     background-color: #27ae60;
+// }
 
 .cancel-btn {
     background-color: #e74c3c;
@@ -96,3 +104,49 @@ h1 {
         justify-content: center;
     }
 }
+
+
+
+
+.house-list{
+    h2{
+        text-align: left;
+        font-weight: 200;
+    }
+
+
+}
+
+
+
+.error-title{
+    color:red;
+    visibility: hidden;
+}
+
+
+
+.error-room{
+    color:red;
+    visibility: hidden;
+}
+
+
+
+.error-squarefeet{
+    color:red;
+    visibility: hidden;
+}
+
+
+.error-located-at{
+    color:red;
+    visibility: hidden;
+}
+
+
+
+
+
+
+
